--- a/.github/workflows/lo-test-all.yml
+++ b/.github/workflows/lo-test-all.yml
@@ -119,8 +119,7 @@ jobs:
           ulimit -SHn 65000
           cd ~/lede
           while true; do make download -j && break || true; done
-          make -j$[`nproc`+1] IGNORE_ERRORS=1
-          if [ ! -e ~/lede/bin/targets/*/*/*imagebuilder*xz ]; then make -j1 V=s; fi
+          make -j1 V=S
           mv `ls ~/lede/bin/targets/*/*/*imagebuilder*xz` ~/ib-$DEVICE.tar.xz
 
           echo "======================="
