--- a/.github/workflows/lo-test-all.yml
+++ b/.github/workflows/lo-test-all.yml
@@ -119,8 +119,8 @@ jobs:
           ulimit -SHn 65000
           cd ~/lede
           while true; do make download -j && break || true; done
-          make -j$[`nproc`+1] IGNORE_ERRORS=1
-          if [ ! -e ~/lede/bin/targets/*/*/*imagebuilder*xz ]; then
+          make -j$[`nproc`+1] V=sc IGNORE_ERRORS=1
+         # if [ ! -e ~/lede/bin//*/*/*imagebuilder*xz ]; then make V=sc; fi
           mv `ls ~/lede/bin/targets/*/*/*imagebuilder*xz` ~/ib-$DEVICE.tar.xz
 
           echo "======================="
